# xchanger

./: .dockerignore  .gitignore  ConsumerDockerfile  Dockerfile  README.md  docker-compose.yaml  examlpe_service_config.yaml  main.py  microservice.py  setup.cfg  setup.py  xchanger_environment.yml  xchanger_requirements.txt
.github/workflows/: python-app.yml
tests/: test_exchanger.py
xchanger/: __init__.py  main.py  microservice.py  version.py
xchanger.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
