[metadata]
# replace with your username:
name = xchanger
version = 0.2
author =Laura Shemilt
author_email = laura.shemilt@rfi.ac.uk
description = a message broker between rabbit mq and flask
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
url = https://github.com/RosalindFranklinInstitute/xchanger
project-urls =
    GitHub = https://github.com/RosalindFranklinInstitute/xchanger
    Bug-Tracker = https://github.com/RosalindFranklinInstitute/xchanger/issues
[options]
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    xchanger = xchanger:main

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']